@@ -1,6 +1,8 @@
 SimpleComplex/Config 1.x, 2017-06-30
 ------------------------------------
 - .ini-based custom file extensions find filter.
+- Vars of a section used in more .ini files in same must be merged;
+  not union'ed.
 
 SimpleComplex/Config 1.x, 2017-06-29
 ------------------------------------
